<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>tail</groupId>
	<artifactId>tail</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<dependencies>
		<dependency>
			<groupId>org.fusesource.jansi</groupId>
			<artifactId>jansi</artifactId>
			<version>1.18</version>
		</dependency>

		<dependency>
			<groupId>com.vivimice</groupId>
			<artifactId>bgzf-randreader</artifactId>
			<version>1.1.1</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<encoding>${project.build.sourceEncoding}</encoding>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-archetype-plugin</artifactId>
				<version>3.0.1</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<configuration>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.6</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<classpathPrefix>lib/</classpathPrefix>
							<mainClass>Tail</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>2.10</version>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/lib</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>com.akathist.maven.plugins.launch4j</groupId>
				<artifactId>launch4j-maven-plugin</artifactId>
				<version>1.7.16</version>
				<executions>
					<execution>
						<id>l4j-clui</id>
						<phase>package</phase>
						<goals>
							<goal>launch4j</goal>
						</goals>
						<configuration>
							<headerType>console</headerType>
							<outfile>target/tail.exe</outfile>
							<jar>target/${project.artifactId}-${project.version}.jar</jar>
							<errTitle>encc</errTitle>
							<classPath>
								<mainClass>Tail</mainClass>
								<addDependencies>true</addDependencies>
								<preCp>anything</preCp>
							</classPath>
							<jre>
								<bundledJre64Bit>false</bundledJre64Bit>
								<bundledJreAsFallback>false</bundledJreAsFallback>
								<minVersion>1.8.0</minVersion>
								<jdkPreference>preferJdk</jdkPreference>
								<runtimeBits>64</runtimeBits>
								<opts>
									<opt>-Djava.endorsed.dirs=./endorsed</opt>
								</opts>
							</jre>
							<!-- <minVersion>1.5.0</minVersion> <maxVersion>1.8.0</maxVersion> -->
							<versionInfo>
								<fileVersion>1.0.0.0</fileVersion>
								<txtFileVersion>1.0.0</txtFileVersion>
								<fileDescription>tail</fileDescription>
								<copyright>MIT</copyright>
								<productVersion>1.0.0.0</productVersion>
								<txtProductVersion>1.0.0</txtProductVersion>
								<productName>tail</productName>
								<originalFilename>tail.exe</originalFilename>
								<!-- internalName is mandatory -->
								<internalName>tail</internalName>
							</versionInfo>
						</configuration>
					</execution>
				</executions>
			</plugin>

		</plugins>
	</build>
</project>